[+] index.html y styles.css: se agrego slider desde cero

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 
+.header{
+    background-color: black;
+}
+
 .img-logo{
-    width: 14vh;
+
+    width: 12vh;
 }
 .container-fluid{
     background-color:black;
@@ -21,7 +26,32 @@ div#navbarNavDropdown {
 }
 
 .icons-color{
-    color: black;
+    color: white;
     font-size: 1.2rem;
 
+}
+.classpadding{
+    padding: 0;
+}
+.main{
+    background-color: black;
+}
+
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+span.carousel-control-prev-icon {
+    background-color: black;
+}
+
+span.carousel-control-next-icon {
+    background-color: black;
+}
+.carousel-indicators [data-bs-target] {
+    
+    background-color: blue;
+ 
 }
