--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ div#navbarNavDropdown {
     background-color: black;
 }
 
-.carousel-inner {
+.principal {
     position: relative;
     width: 100%;
     overflow: hidden;
@@ -54,4 +54,50 @@ span.carousel-control-next-icon {
     
     background-color: blue;
  
+}
+#gratis{
+    color: white;
+    padding-top: 20px;
+}
+.card-body {
+    background-color: black;
+    color: white;
+}
+
+@media screen and (min-width:576px) {
+    .secundary{
+        display: flex;
+
+    }
+    .isecundary{
+        margin-right: 0;
+        flex: 0 0 calc(100%/3);
+        display: block;
+    }
+    .img-wrapper{
+        
+        height: 23vh;
+    }
+    .img-card{
+       height: 50vh;
+        }
+  
+}
+.secundary{
+    padding: 1em;
+
+}
+.card{
+    margin: 0 .5em;
+}
+.img-wrapper{
+    max-width: 100%;
+    height: 20em;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+.img-card{
+max-width: 100%;
+max-height: 100%;
 }
