--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-
+/*Header*/
 .header{
     background-color: black;
 }
@@ -31,6 +31,7 @@ div#navbarNavDropdown {
     padding: 0;
 }
 
+/*Slider*/
 .main{
     background-color: black;
 }
@@ -52,4 +53,73 @@ span.carousel-control-next-icon {
     
     background-color: blue;
  
+}
+/*Seccion gratis*/
+.gratis{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.Card{
+    width: 250px;
+    height: 350px;
+    border-radius: 10px;
+    overflow: hidden;
+    border: 5px solid blue;
+    position: relative;
+}
+.Card-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+.Card-body{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: -100%;
+    color: white;
+    position: absolute;
+    background: black;
+    backdrop-filter: blur(5px);
+    border-radius: 10px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: 1.5s;
+}
+.Card:hover .Card-body{
+right: 0;
+}
+.Card-title{
+    text-transform: uppercase;
+    font-size: 30px;
+    font-weight: 500;
+}
+.Card-info{
+    font-size: 16px;
+    line-height: 25px;
+    margin: 40px 0;
+    font-weight: 400;
+}
+.Card-btn{
+    color: blue;
+    background: white;
+    width: 120px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-transform: capitalize;
+    border: none;
+    outline: none;
+    font-weight: 500;
+    cursor: pointer;
+}
+.seccion-1{
+    color: white;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
