--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,9 @@ div#navbarNavDropdown {
 .classpadding{
     padding: 0;
 }
+body{
+    background-color: black;
+}
 
 .main{
     background-color: black;
@@ -207,6 +210,10 @@ h5 {
 }
 a {
     color: gray
+}
+
+.copyright{
+color: white;
 }
 
 .titulos-footer{
