--- a/stylesUser.css
+++ b/stylesUser.css
@@ -1,232 +1,200 @@
-.header {
-  background-color: black;
+.header{
+    background-color: black;
 }
 
-.img-logo {
-  width: 12vh;
+.img-logo{
+
+    width: 12vh;
 }
-.container-fluid {
-  background-color: black;
+.container-fluid{
+    background-color:black;
 }
 
 .logo {
-  background-color: black;
+    background-color: black;
 }
 
 .text-menu {
-  color: white;
+    color: white;
 }
 div#navbarNavDropdown {
-  background: black;
+    background: black;
 }
 
-.icons-color {
-  color: white;
-  font-size: 1.2rem;
+.icons-color{
+    color: white;
+    font-size: 1.2rem;
+
 }
-.classpadding {
-  padding: 0;
+.classpadding{
+    padding: 0;
 }
-span.navbar-toggler-icon.mend {
-  background-color: whitesmoke;
+body{
+    background-color: black;
 }
-body {
-  background-color: black;
+.main{
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.main {
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.login {
-  color: white;
+.login{
+    color: white;
 }
 
-.wrapper {
-  position: relative;
-  width: 400px;
-  height: 440px;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-radius: 15px;
-  z-index: 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: white;
-  overflow: hidden;
+.wrapper{
+    position: relative;
+    width: 400px;
+    height: 440px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 15px;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: white;
+    overflow: hidden;
+    
 }
 
-.wrapper .form-box {
-  width: 100%;
-  padding: 40px;
+.wrapper .form-box{
+    width: 100%;
+    padding: 40px;
+    
 }
 
-.wrapper .form-box .login {
-  display: none;
+.wrapper .form-box .login{
+    display: none;
 }
 
-.form-box h2 {
-  font-size: 2em;
-  text-align: center;
+.form-box h2{
+    font-size: 2em;
+    text-align: center;
 }
-.input-box {
-  position: relative;
-  width: 100%;
-  height: 50px;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
-  margin: 30px 0;
+.input-box{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid rgba(255, 255, 255, .5);
+    margin: 30px 0;
+   
 }
-.input-box label {
-  position: absolute;
-  top: 50%;
-  left: 5px;
-  transform: translateY(-50%);
-  font-size: 1em;
-  font-weight: 500;
-  pointer-events: none;
-  transition: 0.5s;
-}
-
-.input-box input:focus ~ label,
-.input-box input:valid ~ label {
-  top: -5px;
+.input-box label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
+    font-weight: 500;
+    pointer-events: none;
+    transition: .5s;
 }
 
-.input-box input {
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 1em;
-  font-weight: 600;
-  padding: 0 35px 0 5px;
-  color: white;
+.input-box input:focus~label,
+.input-box input:valid~label{
+    top: -5px;
 }
-.input-box .icon {
-  position: absolute;
-  right: 8px;
-  font-size: 1.2em;
-  line-height: 57px;
+
+.input-box input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    font-weight: 600;
+    padding: 0 35px 0 5px;
+    color: white;
 }
-.remember-forgot {
-  font-size: 0.9em;
-  font-weight: 500;
-  margin: -15px 0 15px;
-  display: flex;
-  justify-content: space-between;
+.input-box .icon{
+position: absolute;
+right: 8px;
+font-size: 1.2em;
+line-height: 57px;
+
 }
-.remember-forgot label input {
-  margin-right: 3px;
+.remember-forgot{
+    font-size:  .9em;
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;
 }
-.remember-forgot a {
-  margin-right: 3px;
-  text-decoration: none;
+.remember-forgot label input{
+    margin-right: 3px;
 }
-.remember-forgot a:hover {
+.remember-forgot a{
+    margin-right: 3px;
+    text-decoration: none;
+}
+.remember-forgot a:hover{
   text-decoration: underline;
 }
 
-.btn {
-  width: 100%;
-  height: 45px;
-  background-color: white;
-  border: none;
-  outline: none;
-  color: black;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 1em;
-  font-weight: 500;
+.btn{
+    width: 100%;
+    height: 45px;
+    background-color: white;
+    border: none;
+    outline: none;
+    color: black;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 500;
 }
-.login-register {
-  font-size: 0.9em;
-  text-align: center;
-  font-weight: 500;
-  margin: 25px 0 10px;
+.login-register{
+    font-size:  .9em;
+    text-align: center;
+    font-weight: 500;
+    margin: 25px 0 10px;
 }
-.login-register p a:hover {
-  text-decoration: underline;
+.login-register p a:hover{
+text-decoration: underline;
 }
-.forget {
-  color: blue;
-  text-decoration: none;
-  font-weight: 600;
-}
-
-/**/
-@media (max-width: 968px) {
-  .rem {
-    width: 23%;
-  }
-  .rem1 {
-    width: 30%;
-  }
-}
-@media (max-width: 800px) {
-  .rem {
-    display: none;
-  }
-  .rem1 {
-    display: none;
-  }
-}
-@media (max-width: 567px) {
-  .rem {
-    display: none;
-  }
-  .rem1 {
-    display: none;
-  }
+.forget{
+    color: blue;
+    text-decoration: none;
+    font-weight: 600;
 }
 
-/**/
 
-.img-fondo {
-  display: flex;
-  justify-content: center;
-}
-.rem {
-  width: 32%;
-}
-.rem1 {
-  width: 38%;
-}
 
 .footer {
-  background-color: black;
+    background-color: black;
 }
-.link-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-left: -1rem;
-  margin-right: -1rem;
-  text-align: center;
-  gap: 20px;
+.link-list{
+    
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-left: -1rem;
+        margin-right: -1rem;
+        text-align: center;
+        gap: 20px;
+        
 }
-.t {
-  list-style-type: none;
+.t{
+    list-style-type: none;
 }
-.a {
-  text-decoration: none;
-  color: white;
+.a{
+    text-decoration: none;
+    color: white;
 }
-.hr {
-  color: white;
+.hr{
+    color: white;
 }
 ul {
-  list-style: none;
+    list-style: none;
 }
 h5 {
-  color: white;
+    color: white;
 }
 a {
-  color: gray;
+    color: gray
 }
-.copyright {
-  color: white;
-  padding-left: 20px;
-}
+.copyright{
+    color: white;
+    padding-left: 20px;
+    }
